# neopaste

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
neopaste/: __main__.py  cli.py  cli.toml  columnar.py  internals.py
